# failure-modes

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
notebooks/: experiments.ipynb  grasp.ipynb
src/failure-modes/: add_error_indicators.py
