[project]
name = "failure-modes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.10"
dependencies = [
    "catboost>=1.2.8",
    "datasets>=3.6.0",
    "grasptext>=0.0.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "pandas>=1.5.0",
    "rich>=13.0.0",
    "scikit-learn>=1.6.1",
    "shap>=0.48.0",
    "torch>=2.7.1",
    "transformers[torch]>=4.53.1",
]
